<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardMaxElevation="2dp"
        app:cardCornerRadius="12dp"
        app:cardUseCompatPadding="true"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            >

            <ImageView
                android:id="@+id/deliveredItemImageView"
                android:layout_width="150dp"
                android:layout_height="match_parent"
                android:src="@drawable/face_icon"
                android:scaleType="centerCrop"
                android:layout_gravity="center"
                tools:srcCompat="@tools:sample/backgrounds/scenic"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/orderId"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/order_id"
                android:textColor="@color/black"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/deliveredItemProductName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Product Name"
                android:layout_marginTop="5dp"
                android:textColor="@color/black"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/deliveredItemQuantity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="Quantity: "
                android:textColor="@color/black"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/deliveredItemPrice"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:textColor="@color/black"
                android:text="Price: /-"
                android:textSize="14sp"
                />


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/order_placed_on"
                    android:textSize="14sp"
                    android:textColor="@color/black"/>

                <TextView
                    android:id="@+id/orderPlacedDateTxtView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:textSize="14sp"
                    android:layout_marginStart="5dp"
                    android:textColor="@color/black"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="10dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/deliveryStatusTxtView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/delivered_by"
                    android:textSize="14sp"
                    android:textColor="@color/black" />

                <TextView
                    android:id="@+id/deliveryDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:textSize="14sp"
                    android:layout_marginStart="5dp"
                    android:textColor="@color/black" />

            </LinearLayout>

            <TextView
                android:id="@+id/trackOrder"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/button_gradient_bg"
                android:backgroundTint="@color/green"
                android:gravity="center"
                android:padding="5dp"
                android:text="@string/track_order"
                android:textColor="@color/white" />
        </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</RelativeLayout>