<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activity.PaymentMethodsActivity">

    <ProgressBar
        android:id="@+id/summaryProgressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:elevation="10dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="55dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/checkout1"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:gravity="center"
                    android:text="Payment "
                    android:textColor="@color/green"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <LinearLayout
                    android:id="@+id/linerLayout11"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/checkout1"
                    android:layout_marginTop="20dp"
                    android:elevation="5dp"
                    android:gravity="center"
                    android:orientation="horizontal"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/checkout1">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/ic_right_tick"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            app:tint="@color/green" />
                    </androidx.constraintlayout.widget.ConstraintLayout>

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/ic_right_tick"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            android:background="@color/white"
                            app:tint="@color/green" />
                    </androidx.constraintlayout.widget.ConstraintLayout>

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:background="@color/white"
                            android:src="@drawable/process_checkout_icon"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />
                    </androidx.constraintlayout.widget.ConstraintLayout>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/linearLayout3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="10"
                    app:layout_constraintBottom_toBottomOf="@+id/linerLayout11"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/linerLayout11">

                    <View
                        android:layout_width="0dp"
                        android:layout_height="3dp"
                        android:layout_weight="2" />

                    <ImageView
                        android:layout_width="0dp"
                        android:layout_height="3dp"
                        android:layout_weight="3"
                        android:src="@drawable/dashed_line"
                        app:tint="@color/green"
                        tools:srcCompat="@drawable/dashed_line" />

                    <ImageView
                        android:layout_width="0dp"
                        android:layout_height="3dp"
                        android:layout_weight="3"
                        android:src="@drawable/dashed_line"
                        tools:srcCompat="@drawable/dashed_line" />

                    <View
                        android:layout_width="0dp"
                        android:layout_height="3dp"
                        android:layout_weight="2" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/linearLayout2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/linerLayout11"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:weightSum="3"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/linerLayout11">

                    <TextView
                        android:id="@+id/checkout1ImageView"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="Delivery address"
                        android:textColor="@color/green" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="Order summary"
                        android:textColor="@color/green" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="Payment"
                        android:textColor="@color/green" />
                </LinearLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="10dp"
                android:background="@color/light_gray" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/select_your_payment_method"
                android:textColor="@color/black"
                android:textSize="16sp" />



            <LinearLayout
                android:id="@+id/cardLl"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:padding="5dp"
                android:background="@drawable/button_design"
                android:orientation="horizontal">

                <CheckBox
                    android:layout_width="19dp"
                    android:layout_height="24dp"
                    android:clickable="false"
                    android:layout_gravity="center"
                    android:layout_marginStart="15dp" />

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_gravity="center"
                    android:layout_marginStart="10dp"
                    android:src="@drawable/card_icon" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="10dp"
                    android:text="@string/debit_credit_card"
                    android:textSize="14sp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/gPayLl"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:padding="5dp"
                android:background="@drawable/button_design"
                android:orientation="horizontal">

                <CheckBox
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:clickable="false"
                    android:layout_gravity="center"
                    android:layout_marginStart="15dp" />

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_gravity="center"
                    android:layout_marginStart="10dp"
                    android:src="@drawable/gpay_icon" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="10dp"
                    android:text="@string/g_pay"
                    android:textSize="14sp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/paytmLl"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:padding="5dp"
                android:background="@drawable/button_design"
                android:orientation="horizontal">

                <CheckBox
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:clickable="false"
                    android:layout_gravity="center"
                    android:layout_marginStart="15dp" />

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_gravity="center"
                    android:layout_marginStart="10dp"
                    android:src="@drawable/paytm_icon" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="10dp"
                    android:text="@string/paytm"
                    android:textSize="14sp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/phonePayLl"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:padding="5dp"
                android:background="@drawable/button_design"
                android:orientation="horizontal">

                <CheckBox
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_gravity="center"
                    android:clickable="false"
                    android:layout_marginStart="15dp" />

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_gravity="center"
                    android:layout_marginStart="10dp"
                    android:src="@drawable/phonepe_icon" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="10dp"
                    android:text="@string/Phone_pay"
                    android:textSize="14sp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/coddLl"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:padding="5dp"
                android:background="@drawable/button_design"
                android:orientation="horizontal">

                <CheckBox
                    android:id="@+id/codCheckBox"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:checked="true"

                    android:layout_gravity="center"
                    android:layout_marginStart="15dp" />

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_gravity="center"
                    android:layout_marginStart="10dp"
                    android:src="@drawable/cash_on_delivery_icon" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="10dp"
                    android:text="@string/cash_on_delivery"
                    android:textSize="14sp" />

            </LinearLayout>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

    <TextView
        android:id="@+id/proceedToPaymentBtn"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="15dp"
        android:background="@drawable/offer_background"
        android:backgroundTint="@color/yellow"
        android:gravity="center"
        android:text="Place order"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>